added token.h token.cpp

--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -1,15 +1,13 @@
-# add_library(aml
-#   "src/math_base.cpp"
-#   "src/math_vector.cpp"
-#   )
 
-# target_include_directories(aml PUBLIC
-#   "${CMAKE_CURRENT_SOURCE_DIR}/include"
-#   )
+FILE(GLOB SRCFILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+
+add_executable(aml "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp" ${SRCFILES})
+
+target_include_directories(aml PUBLIC
+  "${CMAKE_CURRENT_SOURCE_DIR}/include"
+  )
 
 
-
-add_executable(aml "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 
 # target_include_directories(math_tests PUBLIC
 #   "${CMAKE_CURRENT_SOURCE_DIR}/include"
