--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -6,7 +6,27 @@ include_directories(${Boost_INCLUDE_DIR})
 add_executable(aml "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp" ${SRCFILES})
 
 set_property(TARGET aml PROPERTY CXX_STANDARD 20)
-# target_compile_options(aml PRIVATE -Werror -Wall -Wextra)
+target_compile_options(aml PRIVATE
+  -Werror
+  -Wall
+  -Wextra
+  -Wpedantic
+  -Wconversion
+  -Wextra-semi
+  -Wfloat-equal
+  -Wlogical-op
+  -Wnon-virtual-dtor
+  -Wold-style-cast
+  -Wshadow=compatible-local
+  #-Wsign-conversion
+  -Wsign-promo
+  -Wzero-as-null-pointer-constant
+
+  -Wcast-align
+  -Wcast-qual
+  -Woverloaded-virtual
+  -Wredundant-decls
+  )
 
 target_include_directories(aml PUBLIC
   "${PROJECT_SOURCE_DIR}/3rdparty"
