--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(aml_project VERSION 0.5)
+project(aml_project VERSION 0.5 LANGUAGES CXX)
 
 add_subdirectory(aml)
 
