--- a/aml/CMakeLists.txt
+++ b/aml/CMakeLists.txt
@@ -1,7 +1,5 @@
 FILE(GLOB SRCFILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-set(Boost_USE_STATIC_LIBS ON)
-
 SET(FLAGS
   -Werror
   -Wall
@@ -13,7 +11,7 @@ SET(FLAGS
   -Wlogical-op
   -Wnon-virtual-dtor
   -Wold-style-cast
-  -Wshadow=compatible-local
+  #-Wshadow=compatible-local
   #-Wsign-conversion
   -Wsign-promo
   -Wzero-as-null-pointer-constant
@@ -26,24 +24,29 @@ SET(FLAGS
 
 
 
+set(Boost_USE_STATIC_LIBS ON)
+find_package(Boost COMPONENTS program_options REQUIRED)
+find_package(fmt REQUIRED)
+
+
+
 add_library(aml_lib SHARED ${SRCFILES})
 target_compile_options(aml_lib PUBLIC ${FLAGS})
 target_include_directories(aml_lib PUBLIC include)
 set_target_properties(aml_lib PROPERTIES OUTPUT_NAME aml CXX_STANDARD 20)
+target_link_libraries(aml_lib fmt::fmt)
 
 
 
-find_package(Boost COMPONENTS program_options REQUIRED)
 add_executable(aml_bin main.cpp)
-target_include_directories(aml_bin PUBLIC include ${Boost_INCLUDE_DIR})
 target_link_libraries(aml_bin PUBLIC ${Boost_LIBRARIES} aml_lib)
 set_target_properties(aml_bin PROPERTIES OUTPUT_NAME aml CXX_STANDARD 20)
+# target_include_directories(aml_bin PUBLIC ${CMAKE_SOURCE_DIR}/3rdparty)
 
 
 
 add_executable(aml_tests tests/main.cpp)
 set_property(TARGET aml_tests PROPERTY CXX_STANDARD 20)
-target_include_directories(aml_tests PUBLIC include ${CMAKE_SOURCE_DIR}/3rdparty)
 target_link_libraries(aml_tests aml_lib)
 
 enable_testing()
