--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,103 +1,45 @@
-image: gcc
-
-
+variables:
+  IMAGE_TAG:        $CI_REGISTRY/$CI_PROJECT_PATH/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
+  IMAGE_TAG_LATEST: $CI_REGISTRY/$CI_PROJECT_PATH/$CI_COMMIT_REF_NAME:latest
+  IMAGE_TAG_STAB:   $CI_REGISTRY/$CI_DEFAULT_BRANCH:latest
 
 stages:
-  - compile_deps
   - build
   - test
+  - release
+  - deploy
 
+before_script:
+  - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
 
+image: docker:latest
 
-fmt:
-  stage: compile_deps
-  script:
-    - apt update;
-      apt -y upgrade;
-      apt -y install cmake
-    - |
-      if [[ ! -d ./fmt ]]; then
-        git clone https://github.com/fmtlib/fmt.git ./fmt;
-        cmake -S ./fmt -B ./fmt/build -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE;
-        cmake --build ./fmt/build;
-      fi
-  cache:
-    paths:
-      - ./fmt
-  artifacts:
-    paths:
-      - ./fmt
-    expire_in: 1 week
-
-
-
-spdlog:
-  stage: compile_deps
-  script:
-    - apt update;
-      apt -y upgrade;
-      apt -y install cmake
-    - |
-      if [[ ! -d ./spdlog ]]; then
-        git clone https://github.com/gabime/spdlog.git ./spdlog;
-        cmake -S ./spdlog -B ./spdlog/build;
-        cmake --build ./spdlog/build;
-      fi
-  cache:
-    paths:
-      - ./spdlog
-  artifacts:
-    paths:
-      - ./spdlog
-    expire_in: 1 week
-
-
-
-catch2:
-  stage: compile_deps
-  script:
-    - apt update;
-      apt -y upgrade;
-      apt -y install cmake
-    - |
-      if [[ ! -d ./catch2 ]]; then
-        git clone https://github.com/catchorg/catch2.git ./catch2;
-        cmake -S ./catch2 -B ./catch2/build;
-        cmake --build ./catch2/build;
-      fi
-  cache:
-    paths:
-      - ./catch2
-  artifacts:
-    paths:
-      - ./catch2
-    expire_in: 1 week
-
-
+services:
+  - docker:dind
 
 build:
   stage: build
-  before_script:
-    - apt update;
-      apt -y upgrade;
-      apt -y install cmake libboost-program-options-dev
-    - cmake --build ./fmt/build    --target install;
-    - cmake --build ./spdlog/build --target install;
-    - cmake --build ./catch2/build --target install;
   script:
-    - cmake -S. -B./build && cmake --build ./build
-  cache:
-    paths:
-      - ./build
-  artifacts:
-    paths:
-      - ./build
-    expire_in: 1 week
-
-
+    - docker pull $IMAGE_TAG_STAB   || true
+    - docker pull $IMAGE_TAG_LATEST || true
+    - docker build --cache-from $IMAGE_TAG_LATEST --cache-from $IMAGE_TAG_STAB --tag $IMAGE_TAG .
+    - docker push $IMAGE_TAG
 
 test:
   stage: test
   script:
-    - ./build/aml_tests
+    - docker pull $IMAGE_TAG
+    - docker run --entrypoint ./build/aml_tests $IMAGE_TAG
+
+release:
+  stage: release
+  script:
+    - docker pull $IMAGE_TAG
+    - docker tag  $IMAGE_TAG $IMAGE_TAG_LATEST
+    - docker push $IMAGE_TAG_LATEST
+
+deploy:
+  stage: deploy
+  script:
+    - echo "deploy TODO"
 
