--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,17 @@ test:
     - docker pull $IMAGE_TAG
     - docker run --entrypoint aml_tests $IMAGE_TAG
 
+test_manual:
+  stage: test
+  script:
+    - echo "optional tests TODO"
+    - echo "IP=${DEPLOY_IP}"
+    - echo "URL=$DEPLOY_URL"
+    - echo "VERSION=$DEPLOY_VERSION"
+    - docker pull $IMAGE_TAG
+    - docker run --entrypoint aml_tests $IMAGE_TAG
+  when: manual
+
 release:
   stage: release
   script:
@@ -48,10 +59,10 @@ deploy_prod:
   stage: deploy
   script:
     - echo "deploy_prod TODO"
-      - echo "IP: ${DEPLOY_IP}"
-      #- echo "URL: $DEPLOY_URL"
-      #- echo "VERSION: $DEPLOY_VERSION"
-      #- echo "IMAGE_TAG: $IMAGE_TAG"
-      #- echo "IMAGE_TAG_LATEST: $IMAGE_TAG_LATEST"
+    - echo "IP=${DEPLOY_IP}"
+    - echo "URL=$DEPLOY_URL"
+    - echo "VERSION=$DEPLOY_VERSION"
+    - echo "IMAGE_TAG=$IMAGE_TAG"
+    - echo "IMAGE_TAG_LATEST=$IMAGE_TAG_LATEST"
   when: manual
 
