--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,4 +65,7 @@ deploy_prod:
     - echo "IMAGE_TAG=$IMAGE_TAG"
     - echo "IMAGE_TAG_LATEST=$IMAGE_TAG_LATEST"
   when: manual
+  environment:
+    name: production
+    url: https://aml.amyasnikov.pro
 
