--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ install(TARGETS aml amlc aml_tests
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/amlc
   )
 install(DIRECTORY aml/standard DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/amlc/aml)
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Alexander Mysnikov")
+SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Alexander Myasnikov")
 SET(CPACK_GENERATOR "${AML_PACKAGE_TYPE}")
 INCLUDE(CPack)
 
